--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,12 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
+	    <h2 class="subtitle">{{ site.subtitle }}</h2>
           </div>
 
-          {{ content }}
+	  <div class="content">
+	    {{ content }}
+	  </div>
 
           <div class="footer">
             <div class="contact">
