--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ a:visited { color: #000051; }
   border-top: 4px solid #eee;
   margin-top: 2em;
   overflow: hidden;
+  border-top: 1px solid #82b0bf;
 }
 
 .footer .contact {
