--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ a {
   text-decoration: none;
 }
 a:hover   { color: #82b0bf; }
-a:visited { color: #82b0bf; }
+a:visited { color: #00a; }
 
 /*****************************************************************************/
 /*
