--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/main.css">
+  </head>
+  <body>
+    <div class="site">
+    <div class="header">
+      <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+      <h2 class="subtitle">{{ site.subtitle }}</h2>
+    </div>
 
-    </head>
-    <body>
+    <div class="content">
+      {{ content }}
+    </div>
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-	    <h2 class="subtitle">{{ site.subtitle }}</h2>
-          </div>
+    {% include tag_cloud.html %}
 
-	  <div class="content">
-	    {{ content }}
-	  </div>
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Shevaun Coker<br />
-                Web Developer<br />
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/shevaun">github.com/shevaun</a><br />
-                <a href="https://twitter.com/shevauncoker">twitter.com/shevauncoker</a><br />
-              </p>
-            </div>
-          </div>
-        </div>
-
-    </body>
+    <div class="footer">
+      <div class="contact">
+	<p>
+	  Shevaun Coker<br />
+	  Web Developer<br />
+	</p>
+      </div>
+      <div class="contact">
+	<p>
+	<a href="https://github.com/shevaun">github.com/shevaun</a><br />
+	<a href="https://twitter.com/shevauncoker">twitter.com/shevauncoker</a><br />
+	</p>
+      </div>
+      </div>
+      </div>
+  </body>
 </html>
