--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,7 @@ layout: default
 ---
 <h2>{{ page.title }}</h2>
 <hr>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
+<p class="meta">{{ page.date | date_to_string }} | {{ page | tags }}</p>
 <div class="post">
 {{ content }}
 </div>
